A fix (bug #5546: mysqld crash on PURGE MASTER LOGS BEFORE '...' with log-bin off).