sql/sql_repl.cc
@@ -306,8 +306,13 @@ int purge_master_logs(THD* thd, const char* to_log)
 
 int purge_master_logs_before_date(THD* thd, time_t purge_time)
 {
-  int res = mysql_bin_log.purge_logs_before_date(purge_time);
-  return purge_error_message(thd ,res);
+  if (!mysql_bin_log.is_open())
+  {
+    send_ok(current_thd);
+    return 0;
+  }
+  return purge_error_message(thd,
+                             mysql_bin_log.purge_logs_before_date(purge_time));
 }
 
 /*
